--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   "dependencies": {
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "tachyons": "^4.7.0",
-    "redux": "^3.6.0",
-    "react-redux": "^5.0.4"
+    "react-redux": "^5.0.4",
+    "redux": "^3.6.0"
   }
 }
